add runs to config file
