# server/server/src/openapi.rs
@@ -6,8 +6,8 @@ use utoipa::OpenApi;
 
 #[derive(OpenApi)]
 #[openapi(
-    paths(get_contest_file),
-    components(schemas(ContestFile, Team, Problem, Answer, ConfigContest, SedeEntry))
+    paths(get_contest_file, get_config_file, get_allruns_ws),
+    components(schemas(ContestFile, Team, Problem, Answer, ConfigContest, SedeEntry, RunTuple))
 )]
 /// Animeitor api description.
 pub struct ApiDoc;
@@ -37,3 +37,14 @@ pub fn get_contest_file() {}
     )]
 /// Gets the contest description.
 pub fn get_config_file() {}
+
+#[utoipa::path(
+        get,
+        path = "/allruns_ws",
+        responses(
+            (status = 200, description = "WEBSOCKET: Get constest runs in a websocket connection", body = Vec<RunTuple>),
+        ),
+    )]
+/// Returns all runs as a websocket connection.
+/// API description is not exact, because response is a websocket connection.
+pub fn get_allruns_ws() {}
